--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -1,6 +1,8 @@
 <div class="wrapper">
+  <div id="page-heading">
     <h1><span class="glyphicon glyphicon-th-list"></span> List of customers</h1>
     <hr/>
+  </div>  
     
     <nav class="navbar navbar-default customer-navbar">
       <div class="container-fluid">
