--- a/app/views/layouts/customerdashbord.html.erb
+++ b/app/views/layouts/customerdashbord.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons">
 </head>
-<body>
+<body class="home" style="background-color: #F5F5F5">
 	<div class="container alert-box">
 		<% flash.each do |name,msg| %>
 			<div class="container animated bounceInDown">
