--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -22,6 +22,7 @@
              <div class="form-group col-md-3">
                 <%= f.label :date ,'Date'%>
                 <%= f.text_field :date, class: "form-control", placeholder: "Enter application date." %>
+
              </div>
              <div class="form-group col-md-3">
                  <%= f.label :connection_id ,'User Id'%>
@@ -35,7 +36,7 @@
          
          
          <div class="row">
-             <div class="form-group col-md-3">
+             <div class="form-group col-md-3" id="sandbox-container-two">
                  <%= f.label :date_of_birth ,'Date of birth'%>
                  <%= f.text_field :date_of_birth, class: "form-control", placeholder: "Enter date of birth." %>
              </div>
