--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -36,7 +36,7 @@
                            <h4 class="dashboord-head-data"><i class="fa fa-mobile fa-lg" aria-hidden="true"></i> <%= @customer.mobile_no %></h4>
                         </div>
                         <div class="col-md-1">
-                          <%= link_to 'Back', customers_path, class: "btn btn-md btn-danger" %>
+                          <%= link_to 'Back', customers_path, class: "btn btn-sm btn-danger" %>
                         </div>
                     </header>
                 </div>
@@ -48,54 +48,95 @@
                         <hr/>
                       </div>
 
-                      <div class="col-md-6">
-                          <h4><strong><i class="fa fa-home" aria-hidden="true"></i> Billing address</strong></h4>
-                          <div class="custom-well col-md-12">
-                            <div class="col-md-12 address">
-                                <p><%= @customer.billing_address %></p>
-                            </div>
-                            <div class="col-md-2">
-                              <p><strong>Pin code:</strong></p>
-                              <p><%= @customer.pin_no %></p>
-                            </div>
-                            <div class="col-md-3">
-                              <p><strong>Telephone no:</strong></p>
-                              <p><%= @customer.telephone_no %></p>
-                            </div>
-                            <div class="col-md-4">
-                                <p><strong>Email:</strong></p>
-                                <p><%= @customer.email %></p>
-                            </div>
-                            <div class="col-md-3">
-                                <p><strong>Mobile no:</strong></p>
-                                <p><%= @customer.mobile_no %></p>
-                            </div>
-                          </div>
-                      </div> 
-                      <div class="col-md-6">
-                          <h4><strong><i class="fa fa-map-marker" aria-hidden="true"></i> Installation address</strong></h4>
-                          <div class="custom-well col-md-12">
-                            <div class="col-md-12 address">
-                                <p><%= @customer.installation_address %></p>
-                            </div>
-                            <div class="col-md-2">
-                              <p><strong>Pin code:</strong></p>
-                              <p><%= @customer.installation_pin_no %></p>
-                            </div>
-                            <div class="col-md-3">
-                              <p><strong>Telephone no:</strong></p>
-                              <p><%= @customer.installation_telephone_no %></p>
-                            </div>
-                            <div class="col-md-4">
-                                <p><strong>Email:</strong></p>
-                                <p><%= @customer.installation_email %></p>
-                            </div>
-                            <div class="col-md-3">
-                                <p><strong>Mobile no:</strong></p>
-                                <p><%= @customer.installation_mobile_no %></p>
-                            </div>
-                          </div>
-                      </div>   
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <div class="col-md-6">
+                              <h4><strong><i class="fa fa-home" aria-hidden="true"></i> Billing address</strong></h4>
+                              <div class="custom-well col-md-12">
+                                <div class="col-md-12 address">
+                                    <p><%= @customer.billing_address %></p>
+                                    <hr/>
+                                </div>
+
+                                <div class="col-md-2">
+                                  <p><strong>Pin code:</strong></p>
+                                  <p><%= @customer.pin_no %></p>
+                                </div>
+                                <div class="col-md-3">
+                                  <p><strong>Telephone no:</strong></p>
+                                  <p><%= @customer.telephone_no %></p>
+                                </div>
+                                <div class="col-md-4">
+                                    <p><strong>Email:</strong></p>
+                                    <p><%= @customer.email %></p>
+                                </div>
+                                <div class="col-md-3">
+                                    <p><strong>Mobile no:</strong></p>
+                                    <p><%= @customer.mobile_no %></p>
+                                </div>
+                              </div>
+                          </div> 
+                          <div class="col-md-6">
+                              <h4><strong><i class="fa fa-map-marker" aria-hidden="true"></i> Installation address</strong></h4>
+                              <div class="custom-well col-md-12">
+                                <div class="col-md-12 address">
+                                    <p><%= @customer.installation_address %></p>
+                                    <hr/>
+                                </div>
+                                <div class="col-md-2">
+                                  <p><strong>Pin code:</strong></p>
+                                  <p><%= @customer.installation_pin_no %></p>
+                                </div>
+                                <div class="col-md-3">
+                                  <p><strong>Telephone no:</strong></p>
+                                  <p><%= @customer.installation_telephone_no %></p>
+                                </div>
+                                <div class="col-md-4">
+                                    <p><strong>Email:</strong></p>
+                                    <p><%= @customer.installation_email %></p>
+                                </div>
+                                <div class="col-md-3">
+                                    <p><strong>Mobile no:</strong></p>
+                                    <p><%= @customer.installation_mobile_no %></p>
+                                </div>
+                              </div>
+                          </div>   
+                        </div>
+                      </div>
+                      <br/>
+                      <br/>
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <div class="col-md-6">
+                              <h4><strong><i class="fa fa-credit-card" aria-hidden="true"></i> Address proof details</strong></h4>
+                              <div class="custom-well col-md-12">
+                                <div class="col-md-8 img-address-proof">
+                                  <%= image_tag @customer.address_proof.url if @customer.address_proof? %>
+                                </div>
+                                <div class="col-md-4">
+                                  <div>
+                                    <P><strong><i class="fa fa-credit-card" aria-hidden="true"></i> <%= @customer.address_proof_type %></strong></P>
+                                    <h4><strong><%= @customer.address_proof_no %></strong></h4>
+                                  </div>
+                                </div>
+                              </div>
+                          </div> 
+                          <div class="col-md-6">
+                              <h4><strong><i class="fa fa-map-marker" aria-hidden="true"></i> Identity proof details</strong></h4>
+                              <div class="custom-well col-md-12">
+                                <div class="col-md-8 img-address-proof">
+                                  <%= image_tag @customer.identity_proof.url if @customer.identity_proof? %>
+                                </div>
+                                <div class="col-md-4">
+                                  <div>
+                                    <p><strong><i class="fa fa-credit-card" aria-hidden="true"></i> <%= @customer.identity_proof_type %></strong></p>
+                                    <h4><strong><%= @customer.identity_proof_no %></strong></h4>
+                                  </div>
+                                </div>
+                              </div>
+                          </div>   
+                        </div>
+                      </div>
                       
                     </div><!-- end of row-2 -->
                     <div class="row" id="row-two">
